--- a/rubygem-puppet/Makefile
+++ b/rubygem-puppet/Makefile
@@ -1,5 +1,5 @@
 NAME = puppet
 VERSION = 2.7.14
-DEPENDS := -d rubygem-json -d libcurl3 -d libopenssl-ruby1.8
+DEPENDS := rubygem-json libcurl3 libopenssl-ruby1.8
 
 include ../include/gem.mk
