--- a/libjna-java/Makefile
+++ b/libjna-java/Makefile
@@ -5,10 +5,13 @@ FPM_SOURCE = dir
 SOURCE_URL = https://github.com/twall/jna/blob/$(VERSION)/dist/jna.jar?raw=true
 PACKAGE_URL = https://github.com/twall/jna/
 PACKAGE_DESCRIPTION = JNA allows you to call directly into native functions using natural Java method invocation
-INSTALLED_JAR_NAME = jna.jar
 
 include ../include/base.mk
 
+default_fetch: $(CACHEDIR)
+	/usr/bin/wget "$(SOURCE_URL)" -O $(CACHEDIR)/jna-$(VERSION).jar
+
 build: fetch default_build
-	/usr/bin/install -D -m 0644 $(CACHEDIR)/jna.jar?raw=true \
-		$(DESTDIR)/usr/local/$(NAME)/$(INSTALLED_JAR_NAME)
+	/usr/bin/install -D -m 0644 $(CACHEDIR)/jna-$(VERSION).jar \
+		$(DESTDIR)/usr/share/java/jna-$(VERSION).jar
+	cd $(DESTDIR)/usr/share/java; /bin/ln -s jna-$(VERSION).jar jna.jar
