Fixed relative path for uwsgi install

--- a/uwsgi/package.ini
+++ b/uwsgi/package.ini
@@ -25,9 +25,9 @@ yaml_implementation = libyaml
 malloc_implementation = libc
 extras =
 embedded_plugins = false
-bin_name = ../dest/usr/bin/uwsgi
+bin_name = ../../dest/usr/bin/uwsgi
 append_version = fpm
-plugin_dir = ../dest/usr/lib/uwsgi/plugins
+plugin_dir = ../../dest/usr/lib/uwsgi/plugins
 plugins = admin, cache, carbon, cgi, echo, fastrouter, gevent, graylog2, greenlet, http, logsocket, nagios, ping, python, redislog, router_basicauth, router_redirect, router_redirect, rpc, rrdtool, rsyslog, signal, syslog, ugreen, zergpool
 as_shared_library = false
 
