--- a/storm/Makefile
+++ b/storm/Makefile
@@ -1,8 +1,8 @@
 NAME = storm
-VERSION = 0.8.0-SNAPSHOT
-DEPENDS := "openjdk-6-jre" "storm-jzmq"
+VERSION = 0.8.0
+DEPENDS := "java6-runtime, storm-jzmq"
 FPM_SOURCE = dir
-SOURCE_URL = https://github.com/downloads/nathanmarz/storm/storm-${VERSION}.zip
+SOURCE_URL = https://github.com/downloads/nathanmarz/storm/storm-$(VERSION).zip
 SRC_TGZ = $(notdir $(SOURCE_URL))
 PACKAGE_URL = http://storm-project.net/
 PACKAGE_DESCRIPTION = Storm is a free and open source distributed realtime computation system.
@@ -13,6 +13,6 @@ extract: fetch default_build
 	cd $(BUILDDIR); unzip $(CACHEDIR)/$(SRC_TGZ)
 
 build: extract
-	cd $(BUILDDIR)/storm-$(VERSION) \
+	cd $(BUILDDIR)/storm-* \
 		&& mkdir -p $(DESTDIR)/usr/local \
-		&& cp -pR $(BUILDDIR)/storm-$(VERSION) $(DESTDIR)/usr/local/$(NAME)
+		&& cp -pR $(BUILDDIR)/storm-* $(DESTDIR)/usr/local/$(NAME)
