Update python-barman to 1.2.0

--- a/python-barman/Makefile
+++ b/python-barman/Makefile
@@ -1,5 +1,5 @@
 NAME = barman
-VERSION = 1.1.2
-DEPENDS := "python-argh" "python-psycopg2" "python-dateutil"
+VERSION = 1.2.0
+DEPENDS := "python-argh (>= 0.21.2)" "python-psycopg2" "python-dateutil" "python-argcomplete"
 
 include ../include/python.mk
