--- a/uwsgi/fpm-plugins.ini
+++ b/uwsgi/fpm-plugins.ini
@@ -1,4 +1,4 @@
 [uwsgi]
 inherit = fpm-package
 plugin_dir = ../../dest/usr/lib/uwsgi/plugins
-plugins = admin, cache, carbon, cgi, corerouter, echo, fastrouter, gevent, graylog2, greenlet, http, logfile, logsocket, nagios, ping, python, rawrouter, redislog, router_basicauth, router_cache, router_http, router_redirect, router_rewrite, router_uwsgi, rpc, rrdtool, rsyslog, signal, syslog, ugreen, zergpool
+plugins = cache, carbon, cgi, corerouter, echo, fastrouter, gevent, graylog2, greenlet, http, logfile, logsocket, nagios, ping, python, pypy, rawrouter, redislog, router_basicauth, router_cache, router_http, router_redirect, router_rewrite, router_uwsgi, rpc, rrdtool, rsyslog, signal, syslog, ugreen, zergpool
