--- a/grafana/Makefile
+++ b/grafana/Makefile
@@ -1,5 +1,5 @@
-NAME = grafana
-VERSION = 1.9.0
+NAME = grafana1
+VERSION = 1.9.1
 FPM_SOURCE = dir
 SOURCE_URL = http://grafanarel.s3.amazonaws.com/grafana-$(VERSION).tar.gz
 SRC_TGZ = $(notdir $(SOURCE_URL))
@@ -12,6 +12,6 @@ extract: fetch default_build
 	tar xzf $(CACHEDIR)/$(SRC_TGZ) -C $(BUILDDIR)
 
 build: extract
-	cd $(BUILDDIR)/$(NAME)-$(VERSION) \
+	cd $(BUILDDIR)/grafana-$(VERSION) \
 		&& mkdir -p $(DESTDIR)/usr/share \
-		&& cp -pR $(BUILDDIR)/$(NAME)-$(VERSION) $(DESTDIR)/usr/share/$(NAME)
+		&& cp -pR $(BUILDDIR)/grafana-$(VERSION) $(DESTDIR)/usr/share/$(NAME)
