Upgrade Exhibitor to 1.7.1

--- a/exhibitor/Makefile
+++ b/exhibitor/Makefile
@@ -1,9 +1,9 @@
 NAME = exhibitor
-VERSION = 1.5.0
+VERSION = 1.7.1
 FPM_SOURCE = dir
-SOURCE_URL = https://raw.github.com/Netflix/exhibitor/$(VERSION)/exhibitor-standalone/src/main/resources/buildscripts/standalone/gradle/build.gradle
-GRADLE_VERSION = 1.5
-PACKAGE_URL = https://github.com/Netflix/exhibitor/wiki
+SOURCE_URL = https://raw.github.com/soabase/exhibitor/exhibitor-$(VERSION)/exhibitor-standalone/src/main/resources/buildscripts/standalone/gradle/build.gradle
+GRADLE_VERSION = 5.1.1
+PACKAGE_URL = https://github.com/soabase/exhibitor/wiki
 PACKAGE_DESCRIPTION = Exhibitor is a Java supervisor system for ZooKeeper
 
 include ../include/base.mk
@@ -14,9 +14,8 @@ fetch: default_fetch
 
 build: default_build fetch
 	mkdir -p $(DESTDIR)/usr/share/java
-	cp $(CACHEDIR)/build.gradle $(BUILDDIR)
+	cp build.gradle $(BUILDDIR)
 	cd $(BUILDDIR) && \
-		echo "rootProject.name = 'exhibitor'" > settings.gradle && \
-		./gradle-$(GRADLE_VERSION)/bin/gradle jar
+		./gradle-$(GRADLE_VERSION)/bin/gradle shadowJar
 	mv $(BUILDDIR)/build/libs/exhibitor-$(VERSION).jar $(DESTDIR)/usr/share/java/
 	ln -s exhibitor-$(VERSION).jar $(DESTDIR)/usr/share/java/exhibitor.jar
